--- a/static/game.html
+++ b/static/game.html
@@ -641,8 +641,8 @@
    function showembed()
    {
    $('#embedframe').show();
-   var embedvalue = "&lt;iframe src=&quot;http://game.mclear.co.uk/static/animate.html&quot; width=&quot;400&quot; height=&quot;200&quot;&gt;&lt;/iframe&gt;";
-   $('#embedcode').html("<input type='text' class='fu' value='"+embedvalue+"'><br/><br/>Set your own width and height");
+   var embedvalue = "&lt;iframe src=&quot;http://game.mclear.co.uk/static/animate.html&quot; width=&quot;550&quot; height=&quot;400&quot;&gt;&lt;/iframe&gt;";
+   $('#embedcode').html("<input type='text' class='fu' value='"+embedvalue+"'><br/><br/>Set your own width and height - only visitors to your site will be able to play this game");
    }
    function closeembed()
    {
